@startuml
class Editorial {
    - String nombre
    - ArrayList<Libro> librosPublicados
    + Editorial(String nombre)
    + String getNombre()
    + void setNombre(String nombre)
    + ArrayList<Libro> getLibrosPublicados()
    + void setLibrosPublicados(ArrayList<Libro> librosPublicados)
    + void addLibro(Libro libro)
    + void borrarLibro(Libro libro)
    + String toString()
}

class Estudiante {
    + static int contadorEstudiantes
    + static final String FORMATO_CORREO
    - String nombre
    - String curso
    - int nia
    - String email
    - ArrayList<Libro> librosPrestados
    + Estudiante(String nombre, String curso, String email)
    + String getNombre()
    + void setNombre(String nombre)
    + String getCurso()
    + void setCurso(String curso)
    + int getNia()
    + String getEmail()
    + void setEmail(String email)
    + ArrayList<Libro> getLibrosPrestados()
    + void setLibrosPrestados(ArrayList<Libro> librosPrestados)
    + static int obtenerTotalEstudiantes()
    + static Boolean validarCorreo(String email)
    + void addLibro(Libro libro)
    + void borrarLibro(Libro libro)
    + String toString()
}

class Libro {
    - static int TOTAL_LIBROS
    - static int LIBROS_DISPONIBLES
    - String titulo
    - String autor
    - String id
    - boolean disponible
    - Estudiante estuduantePrestado
    - Editorial editorial
    + Libro(String titulo, String autor, Editorial editorial)
    + String getTitulo()
    + void setTitulo(String titulo)
    + String getAutor()
    + void setAutor(String autor)
    + String getId()
    + boolean getDisponible()
    + Estudiante getEstuduantePrestado()
    + void setEstuduantePrestado(Estudiante estuduantePrestado)
    + Editorial getEditorial()
    + void setEditorial(Editorial editorial)
    + void prestar(Estudiante estudiante)
    + void devolver(Estudiante estudiante)
    + boolean estaDisponible()
    + static int getTotales()
    + static int getDisponibles()
    + String toString()
}

class Prestamo {
    - Estudiante estudiante
    - Libro libro
    - LocalDate fechaPrestamo
    + Prestamo(Estudiante estudiante, Libro libro)
    + Libro getLibro()
    + void setLibro(Libro libro)
    + Estudiante getEstudiante()
    + void setEstudiante(Estudiante estudiante)
    + LocalDate getFechaPrestamo()
    + void setFechaPrestamo(LocalDate fechaPrestamo)
    + String toString()
}


Editorial --> Libro
Estudiante --> Libro
Libro --> Estudiante
Libro --> Editorial
Prestamo --> Estudiante
Prestamo --> Libro

@enduml